chore: bump version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "thinkgisdump"
-version = "0.2.0b0"
+version = "0.2.1"
 description = "Command line tool for scraping GeoJSON from ThinkGIS sites"
 authors = ["Pat Sier <pjsier@gmail.com>"]
 license = "MIT"
